--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,7 +3,7 @@ steps:
       echo "--- Creating symbolic link to job directory :file_folder:" && \
       sleep 5 && ln -s "$(pwd)" /data/job && cd /data/job && \
       echo "+++ Building :hammer:" && \
-      echo 1 | ./eosio_build.sh && \
+      echo 1 | ./wax_build.sh && \
       echo "--- Compressing build directory :compression:" && \
       tar -pczf build.tar.gz build/
     label: ":darwin: High Sierra Build"
@@ -16,7 +16,7 @@ steps:
       echo "--- Creating symbolic link to job directory :file_folder:" && \
       sleep 5 && ln -s "$(pwd)" /data/job && cd /data/job && \
       echo "+++ Building :hammer:" && \
-      echo 1 | ./eosio_build.sh && \
+      echo 1 | ./wax_build.sh && \
       echo "--- Compressing build directory :compression:" && \
       tar -pczf build.tar.gz build/
     label: ":darwin: Mojave Build"
@@ -28,7 +28,7 @@ steps:
 
   - command: |
         echo "+++ :hammer: Building" && \
-        echo 1 | ./eosio_build.sh && \
+        echo 1 | ./wax_build.sh && \
         echo "--- :compression: Compressing build directory" && \
         tar -pczf build.tar.gz build/
     label: ":ubuntu: Build"
@@ -43,7 +43,7 @@ steps:
     
   - command: |
         echo "+++ :hammer: Building" && \
-        echo 1 | ./eosio_build.sh && \
+        echo 1 | ./wax_build.sh && \
         echo "--- :compression: Compressing build directory" && \
         tar -pczf build.tar.gz build/
     label: ":ubuntu: 18.04 Build"
@@ -58,7 +58,7 @@ steps:
 
   - command: |
         echo "+++ :hammer: Building" && \
-        echo 1 | ./eosio_build.sh && \
+        echo 1 | ./wax_build.sh && \
         echo "--- :compression: Compressing build directory" && \
         tar -pczf build.tar.gz build/
     label: ":fedora: Build"
@@ -73,7 +73,7 @@ steps:
  
   - command: |
         echo "+++ :hammer: Building" && \
-        echo 1 | ./eosio_build.sh && \
+        echo 1 | ./wax_build.sh && \
         echo "--- :compression: Compressing build directory" && \
         tar -pczf build.tar.gz build/
     label: ":centos: Build"
@@ -88,7 +88,7 @@ steps:
 
   - command: |
         echo "+++ :hammer: Building" && \
-        echo 1 | ./eosio_build.sh && \
+        echo 1 | ./wax_build.sh && \
         echo "--- :compression: Compressing build directory" && \
         tar -pczf build.tar.gz build/
     label: ":aws: Build"
