[KEW-1341] Fix create account

--- a/samples/hello-world/Makefile
+++ b/samples/hello-world/Makefile
@@ -75,7 +75,8 @@ endif
        "rm -f ~/eosio-wallet/${WAX_ACCOUNT}.wallet && \
         ${CLEOS} wallet create -n ${WAX_ACCOUNT} --to-console && \
         ${CLEOS} wallet import -n ${WAX_ACCOUNT} --private-key ${WAX_PRIVATE_KEY} && \
-        ${CLEOSN} create account ${WAX_ACCOUNT} ${CONTRACT_ACCOUNT} ${CONTRACT_PUBLIC_KEY}"
+        ${CLEOSN} create account ${WAX_ACCOUNT} ${CONTRACT_ACCOUNT} ${CONTRACT_PUBLIC_KEY} \
+                     --stake-net '0.50000000 WAX' --stake-cpu '0.50000000 WAX' --buy-ram-kbytes 8"
 
 .PHONY: dev-docker-stop
 dev-docker-stop:
