--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -39,7 +39,10 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts.hpp.in ${CMAKE_CURRENT_BINA
 
 ### BUILD UNIT TEST EXECUTABLE ###
 file(GLOB UNIT_TESTS "*.cpp") # find all unit test suites
-add_executable( unit_test ${UNIT_TESTS}) # build unit tests as one executable
+
+set(UNIT_TESTS ${UNIT_TESTS} wax/signature_tests.cpp)
+
+add_executable( unit_test ${UNIT_TESTS} ) # build unit tests as one executable
 
 target_link_libraries( unit_test eosio_chain chainbase eosio_testing fc appbase ${PLATFORM_SPECIFIC_LIBS} )
 
