--- a/unittests/contracts.hpp.in
+++ b/unittests/contracts.hpp.in
@@ -7,7 +7,7 @@
 #include <eosio/testing/tester.hpp>
 
 #define CORE_SYM_NAME "${CORE_SYMBOL_NAME}"
-#define CORE_SYM_PRECISION 4
+#define CORE_SYM_PRECISION 8
 
 #define _STRINGIZE1(x) #x
 #define _STRINGIZE2(x) _STRINGIZE1(x)
@@ -53,6 +53,8 @@ namespace eosio {
          MAKE_READ_WASM_ABI(test_api_db,           test_api_db,           test-contracts)
          MAKE_READ_WASM_ABI(test_api_multi_index,  test_api_multi_index,  test-contracts)
          MAKE_READ_WASM_ABI(test_ram_limit,        test_ram_limit,        test-contracts)
+         MAKE_READ_WASM_ABI(wax_rsa,               wax_rsa,               test-contracts)
+
       };
    } /// eosio::testing
 }  /// eosio
