Update mainnet sample

--- a/samples/mainnet/config.ini
+++ b/samples/mainnet/config.ini
@@ -11,7 +11,7 @@ blocks-dir = "blocks"
 chain-state-db-size-mb = 131072
 
 # Maximum size (in MB) of the reversible blocks database (eosio::chain_plugin)
-reversible-blocks-db-size-mb = 340
+# reversible-blocks-db-size-mb = 340
 
 # print contract's output to console (eosio::chain_plugin)
 contracts-console = false
@@ -57,7 +57,7 @@ p2p-max-nodes-per-host = 1
 agent-name = "WAX Agent"
 
 # Can be 'any' or 'producers' or 'specified' or 'none'. If 'specified', peer-key must be specified at least once. If only 'producers', peer-key is not required. 'producers' and 'specified' may be combined. (eosio::net_plugin)
-allowed-connection = any
+# allowed-connection = any
 
 # Optional public key of peer allowed to connect.  May be used multiple times. (eosio::net_plugin)
 # peer-key =
@@ -66,19 +66,19 @@ allowed-connection = any
 # peer-private-key =
 
 # Maximum number of clients from which connections are accepted, use 0 for no limit (eosio::net_plugin)
-max-clients = 25
+# max-clients = 25
 
 # number of seconds to wait before cleaning up dead connections (eosio::net_plugin)
-connection-cleanup-period = 30
+# connection-cleanup-period = 30
 
 # True to require exact match of peer network version. (eosio::net_plugin)
-network-version-match = 0
+# network-version-match = 0
 
 # number of blocks to retrieve in a chunk from any individual peer during synchronization (eosio::net_plugin)
-sync-fetch-span = 100
+# sync-fetch-span = 100
 
 # Enable block production, even if the chain is stale. (eosio::producer_plugin)
-enable-stale-production = false
+# enable-stale-production = false
 
 # Start this node in a state where production is paused (eosio::producer_plugin)
 pause-on-startup = false
@@ -87,7 +87,7 @@ pause-on-startup = false
 max-transaction-time = 1000
 
 # Limits the maximum age (in seconds) of the DPOS Irreversible Block for a chain this node will produce blocks on (eosio::producer_plugin)
-#max-irreversible-block-age = 1800
+# max-irreversible-block-age = 1800
 
 # ID of producer controlled by this node (e.g. inita; may specify multiple times) (eosio::producer_plugin)
 # producer-name = waxproducer
@@ -96,7 +96,7 @@ max-transaction-time = 1000
 # signature-provider =
 
 # Lag in number of blocks from the head block when selecting the reference block for transactions (-1 means Last Irreversible Block) (eosio::txn_test_gen_plugin)
-txn-reference-block-lag = 0
+# txn-reference-block-lag = 0
 
 # eosio key that will be imported automatically when a wallet is created. (eosio::wallet_plugin)
 # eosio-key =
